# sprintfour

./: .gitignore  AGENTS.md  README.md  benchmark.md  participant.md  writeup.md
backend/: .env.example  README.md  detector.go  detector_gliner.go  detector_gliner_test.go  detector_test.go  env.go  export.go  go.mod  http.go  loader.go  main.go  main_test.go  models.go  store.go  text.go  upload.go  upload_detection_test.go  worker.go
backend/cmd/server/: main.go
backend/internal/config/: env.go  runtime.go
backend/internal/detector/: detector.go  detector_test.go  gliner.go  gliner_test.go
backend/internal/document/: models.go  text.go  upload.go  upload_test.go
backend/internal/httpapi/: documents.go  helpers.go  http.go  http_test.go  middleware.go  mutations.go  router.go  uploads.go
backend/internal/seed/: loader.go  loader_test.go
backend/internal/store/: document_state.go  document_state_test.go  export.go  export_logic.go  export_test.go  idempotency_test.go  query.go  query_test.go  redactions.go  redactions_test.go  runtime.go  store.go  test_helpers_test.go  upload.go  (+1 more)
backend/scripts/: api_smoke.sh
dataset/: README.md
dataset/processed/: cuad_contracts.jsonl  cuad_manifest.json  documents_seed.jsonl  mock_redaction_manifest.json  mock_redactions.jsonl  pii_exploration_summary.json
dataset/scripts/: benchmark_upload.py  generate_mock_redactions.py  prepare_cuad.py
frontend/: .cta.json  README.md  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
ner-sidecar/: .env.example  README.md  main.py  pyproject.toml
(+38 files in other folders)
