[project]
name = "ner-sidecar"
version = "0.1.0"
description = "Local GLiNER2 FastAPI sidecar for Redactlane"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "gliner2>=1.3.1",
  "python-dotenv>=1.2.1",
  "torch>=2.8.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
